<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuestionCreate">


    <EditText
        android:id="@+id/valid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:maxLength="5"
        android:ems="10"
        android:hint="valid state"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@mipmap/ic_right_arrow_gray"
        android:drawablePadding="5dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp"
        android:text="please select vote end time"
        app:layout_constraintBottom_toTopOf="@id/questionInput"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/valid" />

    <EditText
        android:id="@+id/questionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Question"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/answerInput1"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/dateInput" />

    <EditText
        android:id="@+id/answerInput1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Answer1"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/answerInput2"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/questionInput" />

    <EditText
        android:id="@+id/answerInput2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Answer2"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/answerInput3"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/answerInput1" />

    <EditText
        android:id="@+id/answerInput3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Answer3"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/answerInput4"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/answerInput2" />

    <EditText
        android:id="@+id/answerInput4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Answer4"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/answerInput3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/valid"
        app:layout_constraintRight_toRightOf="@id/valid"
        app:layout_constraintTop_toBottomOf="@id/answerInput4">

        <Button
            android:id="@+id/addNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>