...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Password: "
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="@id/title2"
        app:layout_constraintRight_toLeftOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintLeft_toRightOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />


    <Button
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Validate"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/textView"
...
