...
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Space
        android:id="@+id/id_s_mid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_weight="1" />


...
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="Login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/id_s_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/register"
        app:layout_constraintTop_toBottomOf="@id/id_s_mid" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
