<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_tv_remain_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f1f1ef"
        android:gravity="center"
        android:padding="25dp"
        android:text="The countdown: "
        android:textColor="#333333"
        app:layout_constraintBottom_toTopOf="@id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/shape_bg_question"
        android:lines="5"
        android:padding="10dp"
        android:text="question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_tv_remain_time" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:text="A:"
        app:layout_constraintLeft_toLeftOf="@id/question"
        app:layout_constraintRight_toRightOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:text="B:"
        app:layout_constraintLeft_toLeftOf="@id/question"
        app:layout_constraintRight_toRightOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:text="C:"
        app:layout_constraintLeft_toLeftOf="@id/question"
        app:layout_constraintRight_toRightOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:text="D:"
        app:layout_constraintLeft_toLeftOf="@id/question"
        app:layout_constraintRight_toRightOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_submit"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/question"
        app:layout_constraintRight_toRightOf="@id/question"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

</androidx.constraintlayout.widget.ConstraintLayout>